# o3de-technicalart

./: .lfsconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
Gems/: README.md
Gems/O3DE/DreamStudioAI/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  __init__.py  config.py  gem.json  rename.secrets.json.example  requirements.txt  workspace.mel
Gems/O3DE/DreamStudioAI/Assets/Objects/: matte_backdrop.fbx  matte_backdrop.mb  (+2 more)
Gems/O3DE/DreamStudioAI/Code/: CMakeLists.txt  dreamstudioai_api_files.cmake  dreamstudioai_editor_private_files.cmake  dreamstudioai_editor_shared_files.cmake  dreamstudioai_editor_tests_files.cmake  dreamstudioai_private_files.cmake  dreamstudioai_shared_files.cmake  dreamstudioai_tests_files.cmake  o3de-dreamstudio_editor_api_files.cmake  o3de-dreamstudio_editor_private_files.cmake  o3de-dreamstudio_editor_shared_files.cmake  o3de-dreamstudio_editor_tests_files.cmake
Gems/O3DE/DreamStudioAI/Editor/: __init__.py
Gems/O3DE/DreamStudioAI/Registry/: assetprocessor_settings.setreg
Gems/O3DE/DreamStudioAI/Tools/: win_launch_wingide.bat
Gems/O3DE/HoudiniEngine/: CMakeLists.txt  README.md  gem.json
Gems/O3DE/HoudiniEngine/Code/: CMakeLists.txt  houdiniengine_api_files.cmake  houdiniengine_editor_private_files.cmake  houdiniengine_editor_shared_files.cmake  houdiniengine_editor_tests_files.cmake  houdiniengine_private_files.cmake  houdiniengine_shared_files.cmake  houdiniengine_tests_files.cmake
Gems/O3DE/HoudiniEngine/DigitalAssets/: HE_Foliage_maker.hda  HE_Level_gen_WFC.hda  HE_Psd_Level.hda  HE_Tree.hda  HE_walls_tool.hda
Gems/O3DE/HoudiniEngine/Registry/: assetprocessor_settings.setreg
Gems/O3DE/urdf-exporter-gem/: CMakeLists.txt  README.md  gem.json
Gems/O3DE/urdf-exporter-gem/Code/: CMakeLists.txt  urdf-exporter-gem_editor_api_files.cmake  urdf-exporter-gem_editor_private_files.cmake  urdf-exporter-gem_editor_shared_files.cmake  urdf-exporter-gem_editor_tests_files.cmake
Gems/O3DE/urdf-exporter-gem/Registry/: assetprocessor_settings.setreg
(+402 files in other folders)
